--- a/apps/paperless/templates/secrets.yaml
+++ b/apps/paperless/templates/secrets.yaml
@@ -13,9 +13,21 @@ spec:
   data:
     - secretKey: PAPERLESS_ADMIN_PASSWORD
       remoteRef:
-        key: /paperless-ngx/db
-        property: password
+        key: /paperless/
+        property: PAPERLESS_ADMIN_PASSWORD
     - secretKey: PAPERLESS_SECRET_KEY
       remoteRef:
-        key: /paperless-ngx
-        property: secret_key
+        key: /paperless/
+        property: PAPERLESS_SECRET_KEY
+    - secretKey: POSTGRES_SUPER_PASS
+      remoteRef:
+        key: /paperless/
+        property: POSTGRES_SUPER_PASS
+    - secretKey: POSTGRES_USER
+      remoteRef:
+        key: /paperless/
+        property: POSTGRES_USER
+    - secretKey: POSTGRES_PASS
+      remoteRef:
+        key: /paperless/
+        property: POSTGRES_PASS
