--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -8,6 +8,11 @@ app-template:
     - name: init-db
       image: ghcr.io/onedr0p/postgres-initdb:14.6
       imagePullPolicy: IfNotPresent
+      env:
+        - name: POSTGRES_HOST
+          value: postgres-rw.databases.svc.cluster.local
+        - name: POSTGRES_DB
+          value: paperless
       envFrom:
         - secretRef:
             name: paperless-secrets
