--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -34,6 +34,10 @@ app-template:
         name: paperless-secrets
   service:
     main:
+      enabled: true
+      type: LoadBalancer
+      externalTrafficPolicy: Local
+      externalIPs: ["192.168.50.225","192.168.50.226","192.168.50.227"]  
       ports:
         http:
           port: 8000
