--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -23,7 +23,7 @@ app-template:
     PAPERLESS_TASK_WORKERS: 2
     PAPERLESS_TIME_ZONE: "America/Los_Angeles"
     PAPERLESS_URL: https://paperless.toostowelsandfroods.com
-    PAPERLESS_ALLOWED_HOSTS: https://paperless.toostowelsandfroods.com
+    PAPERLESS_ALLOWED_HOSTS: ["https://paperless.toostowelsandfroods.com","192.168.50.228"]
     PAPERLESS_CONSUMPTION_DIR: /usr/src/paperless/consume
     PAPERLESS_MEDIA_ROOT: /usr/src/paperless/media
     USERMAP_UID: 1000
