--- a/automation/home-assistant/values.yaml
+++ b/automation/home-assistant/values.yaml
@@ -19,6 +19,10 @@ app-template:
       externalTrafficPolicy: Local
       ports:
         http:
+          use_x_forwarded_for: true
+          trusted_proxies:
+            - 192.168.50.11
+            - 192.168.50.12
           port: 8123
 
   ingress:
