--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -7,6 +7,21 @@ app-template:
   image:
     repository: ghcr.io/paperless-ngx/paperless-ngx
     tag: 1.13.0
+  initContainers:
+    copy-scripts:
+      image: ubuntu:22.04
+      command:
+        - /bin/bash
+        - -c
+        - |
+          cp /scripts/pushover-notifier.sh /mnt/scripts
+          chmod +x /mnt/scripts/*
+      volumeMounts:
+        - name: scripts
+          mountPath: /mnt/scripts
+        - name: notifier
+          mountPath: /scripts/pushover-notifier.sh
+          subPath: pushover-notifier.sh
   env:
     COMPOSE_PROJECT_NAME: paperless
     PAPERLESS_CONSUMER_POLLING: "60"
@@ -86,6 +101,17 @@ app-template:
       type: nfs
       server: 192.168.1.89
       path: "/volume1/k3s/paperless/export"
+    notifier:
+      enabled: true
+      type: configMap
+      name: pushover-notifier
+      subPath: pushover-notifier.sh
+      mountPath: /scripts/pushover-notifier.sh
+      readOnly: true
+    scripts:
+      enabled: true
+      type: emptyDir
+      mountPath: /mnt/scripts
   sidecars:
     redis:
       name: redis
