--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -22,6 +22,7 @@ app-template:
       enabled: true
       ingressClassName: "nginx"
       annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
         nginx.ingress.kubernetes.io/proxy-body-size: "0"
         hajimari.io/appName: "Immich"
         hajimari.io/icon: heroicons:photo
