--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -4,15 +4,11 @@ app-template:
   image:
     repository: ghcr.io/immich-app/immich-proxy
     tag: v1.46.1
-    
-  initContainers:
-    init-db:
-      image: ghcr.io/onedr0p/postgres-initdb:14.7
-      imagePullPolicy: IfNotPresent
-      name: immich-db
-      envFrom:
-        - secretRef:
-            name: immich-secrets
+  postgresql:
+    enabled: true
+    envFrom:
+      - secretRef:
+          name: immich-secrets
   env:
     IMMICH_SERVER_URL: http://localhost:3001
     IMMICH_WEB_URL: http://localhost:3000
