--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -63,6 +63,10 @@ app-template:
       args:
         - ./start-server.sh
       env:
+        - name: NODE_ENV
+          value: "production"
+        - name: DB_DATABASE_NAME
+          value: immich
         - name: IMMICH_SERVER_URL
           value: http://localhost:3001
         - name: IMMICH_WEB_URL
