--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -7,6 +7,9 @@ app-template:
   initContainers:
     init-db:
       image: ghcr.io/onedr0p/postgres-initdb:14.7
+      env:
+        - name: POSTGRES_DB
+          value: immich
       envFrom:
         - secretRef:
             name: immich-secrets
@@ -18,7 +21,6 @@ app-template:
   envFrom:
     - secretRef:
         name: immich-secrets
-        
   service:
     main:
       ports:
