update DB config

--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -10,6 +10,9 @@ spec:
   target:
     name: immich-secrets
   data:
+    # Immich
+    DB_DATABASE_NAME: &dbname immich
+    DB_HOSTNAME: &dbhost postgres-rw.default.svc.cluster.local
     - secretKey: DB_USERNAME
       remoteRef:
         key: /immich/
@@ -22,7 +25,19 @@ spec:
       remoteRef:
         key: /immich/
         property: JWT_SECRET
+    # Postgres Init
+    POSTGRES_DB: *dbname
+    POSTGRES_HOST: *dbhost
+    - secretKey: POSTGRES_PASS
+      remoteRef:
+        key: /immich/
+        property: DB_PASSWORD
     - secretKey: POSTGRES_SUPER_PASS
       remoteRef:
         key: /immich/
         property: POSTGRES_SUPER_PASS
+    - secretKey: POSTGRES_USER
+      remoteRef:
+        key: /immich/
+        property: DB_USERNAME
+
