--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -11,8 +11,8 @@ spec:
     name: immich-secrets
   data:
     # Immich
-    DB_DATABASE_NAME: &dbname immich
-    DB_HOSTNAME: &dbhost postgres-rw.default.svc.cluster.local
+    - DB_DATABASE_NAME: &dbname immich
+    - DB_HOSTNAME: &dbhost postgres-rw.default.svc.cluster.local
     - secretKey: DB_USERNAME
       remoteRef:
         key: /immich/
@@ -26,8 +26,8 @@ spec:
         key: /immich/
         property: JWT_SECRET
     # Postgres Init
-    POSTGRES_DB: *dbname
-    POSTGRES_HOST: *dbhost
+    - POSTGRES_DB: *dbname
+    - POSTGRES_HOST: *dbhost
     - secretKey: POSTGRES_PASS
       remoteRef:
         key: /immich/
