--- a/databases/cloudnative-pg/templates/cluster.yaml
+++ b/databases/cloudnative-pg/templates/cluster.yaml
@@ -3,6 +3,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: postgres
+  namespace: databases
 spec:
   instances: 1
   imageName: ghcr.io/cloudnative-pg/postgresql:14.5
