--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -30,8 +30,12 @@ spec:
         property: DB_PASSWORD
     - secretKey: POSTGRES_SUPER_PASS
       remoteRef:
-        key: /immich/
+        key: /cloudnative-pg/
         property: POSTGRES_SUPER_PASS
+    - secretKey: POSTGRES_SUPER_USER
+      remoteRef:
+        key: /cloudnative-pg/
+        property: POSTGRES_SUPER_USER
     - secretKey: POSTGRES_USER
       remoteRef:
         key: /immich/
