--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -9,7 +9,7 @@ app-template:
       image: ghcr.io/onedr0p/postgres-initdb:14.7
       env:
         POSTGRES_DB: immich
-        POSTGRES_HOST: postgres-rw.cloudnative-pg.svc.cluster.local
+        POSTGRES_HOST: postgres-rw.cloudnative-pg
       envFrom:
         - secretRef:
             name: immich-secrets
@@ -19,7 +19,7 @@ app-template:
     IMMICH_MACHINE_LEARNING_URL: http://localhost:3003
     REDIS_HOSTNAME: localhost
     DB_DATABASE_NAME: immich
-    DB_HOSTNAME: postgres-rw.cloudnative-pg.svc.cluster.local
+    DB_HOSTNAME: postgres-rw.cloudnative-pg
   envFrom:
     - secretRef:
         name: immich-secrets
@@ -73,7 +73,7 @@ app-template:
         - name: DB_DATABASE_NAME
           value: immich
         - name: DB_HOSTNAME 
-          value: postgres-rw.cloudnative-pg.svc.cluster.local
+          value: postgres-rw.cloudnative-pg
         - name: IMMICH_SERVER_URL
           value: http://localhost:3001
         - name: IMMICH_WEB_URL
