--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -26,6 +26,17 @@ jobs:
   renovate:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate Token
+        uses: tibdex/github-app-token@b62528385c34dbc9f38e5f4225ac829252d1ea92 # v1.8.0
+        id: generate-token
+        with:
+          app_id: "${{ secrets.BOT_APP_ID }}"
+          private_key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+
+      - name: Checkout
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+        with:
+          token: "${{ steps.generate-token.outputs.token }}"
       - name: Checkout
         uses: actions/checkout@v3.3.0
       - name: Override default config from dispatch variables
@@ -38,4 +49,4 @@ jobs:
         uses: renovatebot/github-action@v34.149.0
         with:
           configurationFile: .github/renovate.json5
-          token: ${{ secrets.RENOVATE_TOKEN }}
+          token: "${{ steps.generate-token.outputs.token }}"
