--- a/apps/immich/Chart.yaml
+++ b/apps/immich/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: immich
 version: 0.0.0
 dependencies:
-  - name: immich
-    version: 0.0.1
-    repository: https://github.com/immich-app/immich-charts
+  - name: app-template
+    version: 1.3.1
+    repository: https://bjw-s.github.io/helm-charts
