--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -12,6 +12,7 @@ app-template:
     DB_DATABASE_NAME: immich
     DB_HOSTNAME: localhost
     DB_USERNAME: immich
+    NODE_ENV: "production"
   envFrom:
     - secretRef:
         name: immich-secrets
@@ -60,20 +61,14 @@ app-template:
       args:
         - ./start-server.sh
       env:
-        - name: NODE_ENV
-          value: "production"
-        - name: DB_DATABASE_NAME
-          value: immich
-        - name: DB_HOSTNAME 
-          value: localhost
-        - name: IMMICH_SERVER_URL
-          value: http://localhost:3001
-        - name: IMMICH_WEB_URL
-          value: http://localhost:3000
-        - name: IMMICH_MACHINE_LEARNING_URL
-          value: http://localhost:3003
-        - name: REDIS_HOSTNAME
-          value: localhost
+        IMMICH_SERVER_URL: http://localhost:3001
+        IMMICH_WEB_URL: http://localhost:3000
+        IMMICH_MACHINE_LEARNING_URL: http://localhost:3003
+        REDIS_HOSTNAME: localhost
+        DB_DATABASE_NAME: immich
+        DB_HOSTNAME: localhost
+        DB_USERNAME: immich
+        NODE_ENV: "production"
       envFrom:
         - secretRef:
             name: immich-secrets
@@ -88,14 +83,14 @@ app-template:
       args:
         - ./start-microservices.sh
       env:
-        - name: IMMICH_SERVER_URL
-          value: http://localhost:3001
-        - name: IMMICH_WEB_URL
-          value: http://localhost:3000
-        - name: IMMICH_MACHINE_LEARNING_URL
-          value: http://localhost:3003
-        - name: REDIS_HOSTNAME
-          value: localhost
+        IMMICH_SERVER_URL: http://localhost:3001
+        IMMICH_WEB_URL: http://localhost:3000
+        IMMICH_MACHINE_LEARNING_URL: http://localhost:3003
+        REDIS_HOSTNAME: localhost
+        DB_DATABASE_NAME: immich
+        DB_HOSTNAME: localhost
+        DB_USERNAME: immich
+        NODE_ENV: "production"
       envFrom:
       - secretRef:
           name: immich-secrets
