--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -19,4 +19,9 @@ spec:
       remoteRef:
         key: /immich/
         property: JWT_SECRET
+      - secretKey: POSTGRES_PASSWORD
+      remoteRef:
+        key: /immich/
+        property: POSTGRES_PASSWORD
+        
 
