--- a/monitoring/uptime-kuma/uptime-kuma.yaml
+++ b/monitoring/uptime-kuma/uptime-kuma.yaml
@@ -55,3 +55,10 @@ spec:
             size: 3Gi
             mountPath: /app/data
             accessMode: ReadWriteOnce
+  project: default
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+    automated:
+      prune: true
+      selfHeal: true
