--- a/monitoring/kubernetes-dashboard/values.yaml
+++ b/monitoring/kubernetes-dashboard/values.yaml
@@ -47,9 +47,7 @@ kubernetes-dashboard:
         hajimari.io/icon: mdi:kubernetes 
         hajimari.io/appName: Dashboard
         hajimari.io/info: Kubernetes dashboard
-        nginx.ingress.kubernetes.io/rewrite-target: /$2
-          - backend:
-              path: /dashboard(/|$)(.*)
+        nginx.ingress.kubernetes.io/secure-backends: "true" 
       hosts:
         - host: &host k3s.toolstowelsandfroods.com
           http:
