--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -1,6 +1,9 @@
 kube-prometheus-stack:
+  cleanPrometheusOperatorObjectNames: true
   grafana:
     adminPassword: null
+    enabled: false
+    forceDeployDashboards: true
     ingress:
       enabled: true
       ingressClassName: nginx
@@ -34,8 +37,101 @@ kube-prometheus-stack:
         api_url: https://dex.toolstowelsandfroods.com/userinfo
 
   prometheus:
+    ingress:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        hajimari.io/enable: "true"
+        hajimari.io/icon: simple-icons:prometheus
+        hajimari.io/appName: Prometheus
+        hajimari.io/info: Open-source monitoring system with a dimensional data model, flexible query language, efficient time series database and modern alerting approach
+      hosts:
+        - &host prometheus.toolstowelsandfroods.com
+      tls:
+        - secretName: prometheus-tls
+          hosts:
+            - *host
     prometheusSpec:
       ruleSelectorNilUsesHelmValues: false
       serviceMonitorSelectorNilUsesHelmValues: false
       podMonitorSelectorNilUsesHelmValues: false
       probeSelectorNilUsesHelmValues: false
+      retention: 2d
+      retentionSize: 6GB
+      enableAdminAPI: true
+      walCompression: true
+      storageSpec:
+        volumeClaimTemplate:
+          spec:
+            storageClassName: longhorn
+            resources:
+              requests:
+                storage: 20Gi
+  alertmanager:
+    ingress:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        hajimari.io/enable: "true"
+        hajimari.io/icon: alert-decagram-outline
+        hajimari.io/appName: alertmanager
+        hajimari.io/info: Handles alerts sent by client applications such as the Prometheus server
+      hosts:
+        - &host alerts.toolstowelsandfroods.com
+      tls:
+        - secretName: alerts-tls
+          hosts:
+            - *host
+    config:
+      global:
+        resolve_timeout: 5m
+      route:
+        group_by: ["alertname", "job"]
+        group_wait: 30s
+        group_interval: 5m
+        repeat_interval: 6h
+        receiver: opsgenie-warning
+        routes:
+          - receiver: healthchecksio
+            group_wait: 0s
+            group_interval: 1m
+            repeat_interval: 1m
+            matchers:
+              - alertname = "Watchdog"
+          - receiver: "null"
+            matchers:
+              - alertname = "InfoInhibitor"
+          - receiver: opsgenie-critical
+            matchers:
+              - severity =~ "critical|alert"
+            continue: true
+          - receiver: opsgenie-warning
+            matchers:
+              - severity = "warning"
+            continue: true
+    alertmanagerSpec:
+      storage:
+        volumeClaimTemplate:
+          spec:
+            storageClassName: longhorn
+            resources:
+              requests:
+                storage: 1Gi
+  kubeControllerManager:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      https: true
+      insecureSkipVerify: true
+  kubeScheduler:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      https: true
+      insecureSkipVerify: true
+  kubeProxy:
+    enabled: true
+  kubeEtcd:
+    enabled: true
