use longhorn storage

--- a/apps/firefly/values.yaml
+++ b/apps/firefly/values.yaml
@@ -4,7 +4,8 @@ firefly-db:
   envFrom:
     - secretRef:
         name: firefly-secrets
-
+  storage:
+    class: longhorn
 firefly-iii:
   configs:
     TZ: America/Los_Angeles
