add secrets for esphome

--- a/automation/esphome/values.yaml
+++ b/automation/esphome/values.yaml
@@ -35,6 +35,12 @@ app-template:
       enabled: true
       type: emptyDir
       mountPath: /config/.esphome
+    secrets:
+      enabled: true
+      type: secret
+      name: esphome-secrets
+      mountPath: /config/secrets.yaml
+      subPath: secrets.yaml
   resources:
     requests:
       cpu: 300m
