--- a/automation/esphome/templates/secrets.yaml
+++ b/automation/esphome/templates/secrets.yaml
@@ -7,19 +7,19 @@ spec:
     kind: ClusterSecretStore
     name: vault
   target:
-    name: esphome-secrets
-    creationPolicy: Owner
+    name: esphome-secretsr
     template:
       engineVersion: v2
       data:
         secrets.yaml: |-
-          wifi_ssid: "{{ .esphome_wifi_ssid }}"
-          wifi_pwd: "{{ .esphome_wifi_password }}"
-          wifi_fallback_ssid_password: "{{ .esphome_wifi_fallback_ssid_password }}"
-  dataFrom:
-    - extract:
-        key: esphome
-      rewrite:
-        - regexp:
-            source: "(.*)"
-            target: "esphome_$1"
+          wifi_ssid: "{{ esphome_wifi_ssid }}"
+          wifi_pwd: "{{ esphome_wifi_password }}"
+  data:
+    - secretKey: esphome_wifi_ssid
+      remoteRef:
+        key: /esphome/
+        property: wifi_ssid
+    - secretKey: esphome_wifi_password
+      remoteRef:
+        key: /esphome/
+        property: wifi_password
