--- a/automation/esphome/templates/secrets.yaml
+++ b/automation/esphome/templates/secrets.yaml
@@ -7,7 +7,7 @@ spec:
     kind: ClusterSecretStore
     name: vault
   target:
-    name: esphome-secretsr
+    name: esphome-secrets
     template:
       engineVersion: v2
       data:
