--- a/automation/esphome/templates/secrets.yaml
+++ b/automation/esphome/templates/secrets.yaml
@@ -12,8 +12,8 @@ spec:
       engineVersion: v2
       data:
         secrets.yaml: |-
-          wifi_ssid: "{{ esphome_wifi_ssid }}"
-          wifi_pwd: "{{ esphome_wifi_password }}"
+          wifi_ssid: "{{ .esphome_wifi_ssid }}"
+          wifi_pwd: "{{ .esphome_wifi_password }}"
   data:
     - secretKey: esphome_wifi_ssid
       remoteRef:
