--- a/automation/esphome/templates/secrets.yaml
+++ b/automation/esphome/templates/secrets.yaml
@@ -11,7 +11,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        secrets.yaml: |-
+        secrets.yaml: |
           wifi_ssid: "{{ .esphome_wifi_ssid }}"
           wifi_pwd: "{{ .esphome_wifi_password }}"
   data:
