--- a/automation/esphome/templates/secrets.yaml
+++ b/automation/esphome/templates/secrets.yaml
@@ -8,6 +8,7 @@ spec:
     name: vault
   target:
     name: esphome-secrets
+    creationPolicy: Owner
     template:
       engineVersion: v2
       data:
