--- a/system/longhorn-system/values.yaml
+++ b/system/longhorn-system/values.yaml
@@ -1,6 +1,7 @@
 longhorn:
   defaultSettings:
     nodeDownPodDeletionPolicy: delete-both-statefulset-and-deployment-pod
+    backupTarget: nfs://192.168.1.89:/volume1/k3s/backups
   persistence:
     # If you have three or more nodes for storage, use 3; otherwise use 2
     defaultClassReplicaCount: 2  # TODO run DR test to see if we actually need 3
