--- a/apps/homebox/values.yaml
+++ b/apps/homebox/values.yaml
@@ -42,7 +42,7 @@ app-template:
   persistence:
     data:
       enabled: true
-      storageClass: longhorn
+      storageClass: longhorn-homebox
       mountPath: /data
       accessMode : ReadWriteMany
       size: 10Gi
