--- a/storage/minio/templates/secrets.yaml
+++ b/storage/minio/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: paperless-secrets
+  name: minio-secrets
   namespace: paperless
 spec:
   secretStoreRef:
